# transformer-lens-lab

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: 02_residual_stream_growth.md  03_attention_patterns.md  04_logit_lens_paris.md  05_activation_patching.md
notebooks/: 01_first_forward_pass.py  02_residual_stream_growth.py  03_attention_patterns.py  04_logit_lens_paris.py  05_activation_patching_causal_layer.py
src/tlab/: __init__.py  app.py  attention_viz.py  hooks.py  logit_lens.py  model.py  patching.py
tests/: test_app.py  test_attention_viz.py  test_hooks.py  test_logit_lens.py  test_model.py  test_patching.py
