[project]
name = "tlab"
version = "0.1.0"
description = "A from-scratch toolkit for probing what small transformer language models actually compute internally."
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "torch>=2.2",
    "transformers>=4.40",
    "numpy>=1.26",
    "matplotlib>=3.8",
    "jaxtyping>=0.2",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "black>=24.0", "ruff>=0.4"]
app = ["streamlit>=1.33"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
